--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Florian Eeckhout</title>
+  <title>Florian Eeckhout -- Développeur Web</title>
 </head>
 
 <body>
