--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Développeur web freelance à Capesatng offrant des services de développement web de qualité. Contactez-moi pour vos besoins de développement web." />
-  <meta name="description" content="">
+  <meta name="description"
+    content="Développeur web freelance à Capesatng offrant des services de développement web de qualité. Contactez-moi pour vos besoins de développement web." />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -19,6 +19,15 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWV880J5CW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NWV880J5CW');
+  </script>
 </body>
 
 </html>
