--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Florian Eeckhout -- Développeur Web</title>
+<script>
+  (function() {
+    // On script load, set the theme from localStorage
+    const savedTheme = localStorage.getItem('theme') || 'dark';
+    if (savedTheme === 'light') {
+      document.documentElement.classList.add('light-mode');
+    }
+  })();
+
+</script>
 </head>
 
 <body>
